<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".main.detail.DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_name"
            style="@style/TextContent.TitleDetails"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toTopOf="@+id/image_profile"
            tools:text="@string/name_placeholder" />

        <TextView
            android:id="@+id/text_username"
            style="@style/TextContent.SubtitleDetails.Username"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/text_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            tools:text="@string/username_placeholder" />

        <TextView
            android:id="@+id/text_following"
            style="@style/TextContent.Details"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/text_followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_followers"
            app:layout_constraintTop_toTopOf="@+id/text_followers"
            tools:text="@string/following" />

        <TextView
            android:id="@+id/text_repository"
            style="@style/TextContent.Details"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_followers"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_profile"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/repository" />

        <TextView
            android:id="@+id/text_followers"
            style="@style/TextContent.Details"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/text_repository"
            app:layout_constraintEnd_toStartOf="@+id/text_following"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_repository"
            app:layout_constraintTop_toTopOf="@+id/text_repository"
            tools:text="@string/follower" />

        <TextView
            android:id="@+id/text_website"
            style="@style/TextContent.SubtitleDetails.Website"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/progressBarGone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_repository"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/website_placeholder" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_website"
            app:tabTextColor="@color/light_gray"
            tools:ignore="SpeakableTextPresentCheck"
            app:tabBackground="@drawable/custom_tabs"
            app:tabIndicatorColor="@color/soft_gray"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/dark_gray"
            android:clickable="true"
            android:contentDescription="@string/favorite_button"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_favorite_border_24"
            app:tint="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <ProgressBar
            android:id="@+id/progressBarGone"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>